# The-Note

./: .gitignore  AUDIT_REPORT.md  App.tsx  CONSCIOUSNESS_INTEGRATION.md  DEPLOYMENT_GUIDE.md  DOWNLOAD_THIS.md  ENHANCEMENTS.md  Music AI blueprint.txt  README.md  SENTIENCE_REPORT.md  SIMPLE_SETUP.txt  VOICE_CHAT.md  eslint.config.js  index.html  main.tsx  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  universal_2.0.py  vite.config.ts
backend/: README.md  audit_complete_system.py  pyproject.toml  requirements.txt  test_knowledge.py  test_sentience.py  train_consciousness.py
backend/examples/: finetune_embeddings.py  generate_consciousness_midi.py
backend/src/thenote_backend/: main.py
backend/src/thenote_backend/controller/: session.py
backend/src/thenote_backend/modules/: consciousness_finetuning.py  consciousness_midi.py  emotional_consciousness.py  imagination.py  knowledge_base.py  language_lyric.py  live_audio.py  memory.py  singing_voice.py  sound_understanding.py  universal_bridge.py  universal_consciousness.py  voice_performance.py
backend/src/thenote_backend/routing/: consciousness_ws.py  emotional_api.py  hub.py  knowledge_api.py  singing_api.py  voice_chat.py
backend/src/thenote_backend/schemas/: __init__.py  analysis.py  audio.py  base.py  imagination.py  lyrics.py  memory.py  voice.py
backend/src/thenote_backend/utils/: audio.py  (+2 more)
backend/static/: index.html
backend/tests/: conftest.py  test_audio_pipeline.py  test_imagination_voice.py  test_lyric_intelligence.py  test_memory.py  test_session_flow.py  test_telemetry.py
(+34 files in other folders)
